examples/test/testpolicy12822.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12822
  namespace: namespace52
spec:
  podSelector:
    matchLabels:
      key41: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value0
          key22: value19
      podSelector:
        matchLabels:
          key9: value39
          key44: value32
          key48: value9
